Crud api for files
